# cf-integration

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
conformance/: coverage-overrides.yml
crates/compliance/: Cargo.toml
crates/compliance/src/: conformance.rs  conformance_fixture.rs  coverage.rs  lib.rs  profile.rs  suite.rs
crates/compliance/tests/: conformance.rs  conformance_fixture.rs  coverage.rs  gateway_compliance.rs
crates/load/: Cargo.toml
crates/load/src/: engine.rs  goose.rs  lib.rs  locust.rs  settings.rs
crates/load/tests/: load_goose.rs  load_locust.rs  python_adapters.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth_proxy.rs  gateway.rs  http_transport.rs  lib.rs  mcp.rs  probe.rs  topology.rs
crates/mcp/tests/: auth_proxy.rs  backend_identity.rs  gateway.rs  http_transport.rs  mcp.rs  probe.rs
crates/platform/: Cargo.toml
crates/platform/src/: checkout.rs  compose.rs  config.rs  error.rs  lib.rs  mode.rs  process.rs  stack.rs
crates/platform/tests/: checkout.rs  compose.rs  config.rs  process.rs  stack.rs
docker/: docker-compose.cf-conformance.yaml  docker-compose.cf-controlplane-build-labels.yaml  docker-compose.cf-dataplane-build.yaml  docker-compose.cf-dataplane.yaml  docker-compose.cf-integration.yaml  mcp-conformance-server.Dockerfile  mcp_counter.Dockerfile  nginx.cf-dataplane.conf  patch-mcp-conformance-hosts.mjs
docs/: live-rbac-server-access.md
manual-tests/mcp-manual-test-tools/: README.md  UPSTREAM.md  mcp-stateless-streamable-http.md  workspace.yml
manual-tests/mcp-manual-test-tools/collections/mcp-collection/: MCP Call Tools A Get val.bru  MCP Call Tools A Inc.bru  MCP Call Tools A.bru  MCP Call Tools B Get val.bru  MCP Call Tools B Inc.bru  MCP Call Tools B.bru  MCP Call Tools.bru  MCP DIsconnect.bru  MCP Get Prompt.bru  MCP Initalize A.bru  MCP Initalize B.bru  MCP Initalize.bru  MCP List Prompts.bru  MCP List Tools A.bru  MCP List Tools B.bru  MCP List Tools.bru  MCP Notify A.bru  MCP Notify B.bru  MCP Notify.bru  MCP-Gateway-rs configure user.bru  MCP-Gateway-rs get token.bru  bruno.json  collection.bru
manual-tests/mcp-manual-test-tools/collections/mcp-collection/Direct July Stateless MCP Sequence/: call-add-tool.bru  folder.bru  list-tools.bru  messages-listen-sse.bru  server-discover.bru  slow-task-sse-producer.bru
manual-tests/mcp-manual-test-tools/collections/mcp-collection/environments/: contextforge-standalone.bru  contextforge.bru  localenv.bru  mcp-gateway-rs-local.bru  standalone_counter copy.bru  tower-mcp-stateless.bru
reports/: 2026-07-01-ghcr-fast-time-run.md  2026-07-01-harness-streamline-run.md  2026-07-01-next-fixes-applied.md  2026-07-01-upstream-parity-run.md  2026-07-02-dataplane-change-list.md  2026-07-02-dataplane-e2e-report.md  2026-07-02-full-test-run.md  2026-07-02-locust-token-fix.md  2026-07-06-dataplane-e2e-report.md  2026-07-07-dataplane-e2e-report.md  2026-07-08-dataplane-e2e-report.md  mcp-conformance-comparison.md  mcp-gateway-compliance-controlplane.json  mcp-gateway-compliance-controlplane.md  mcp-gateway-compliance-dataplane.json  mcp-gateway-compliance-dataplane.md  mcp-spec-coverage.md  number-1-header-passthrough-report.md
reports/20260701T125130Z/: REPORT.md
scripts/: audit_reports.py  auth_proxy.py  cf-integration.sh  cf-jwt.py  cf-probe.py  cf_jwt.py  cf_probe.py  cf_pytest_dataplane.py  cf_pytest_result_recorder.py  conformance.py  locustfile_cf_dataplane.py  locustfile_mcp.py  mcp_http.py  register-fast-time.py  validate_compose.py
scripts/live_protocol/: sitecustomize.py
src/: app.rs  auth_proxy.rs  backend_identity.rs  checkout.rs  cli.rs  compose.rs  config.rs  conformance.rs  conformance_fixture.rs  coverage.rs  error.rs  gateway.rs  gateway_compliance.rs  lib.rs  main.rs  output.rs  probe.rs  process.rs  runtime.rs  stack.rs  token.rs
src/load/: goose.rs  locust.rs  mod.rs
src/runtime/: compliance.rs  inspect.rs  live.rs  mod.rs  reports.rs  sources.rs  stack.rs  tests.rs  workloads.rs
tests/: auth_proxy.rs  backend_identity.rs  checkout.rs  cli.rs  compose.rs  config.rs  conformance.rs  conformance_fixture.rs  coverage.rs  dispatch.rs  gateway.rs  gateway_compliance.rs  http_transport.rs  load_goose.rs  load_locust.rs  mcp.rs  probe.rs  process.rs  python_adapters.rs  stack.rs  test_make_cli.py  token.rs  workspace_architecture.rs
tests/fixtures/conformance/results/nested/server-server-initialize-2026-07-10T12-34-56-000Z/: checks.json
tests/fixtures/conformance/results/server-tools-list-2026-07-10T12-35-56-000Z/: checks.json
