[package]
name = "cf-integration"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
publish = false
default-run = "cf-integration"

[workspace]
members = ["."]
resolver = "3"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.5.60", features = ["derive"] }
goose = { git = "https://github.com/tag1consulting/goose", rev = "614f75149cab5a963a8bc26d7b62639dedfa7a2b" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.48", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio-stream = "0.1.18"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
