[package]
name = "cf-integration-compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cf-integration-platform.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true
