[package]
name = "cf-integration-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true

[lints]
workspace = true
